{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 54,
  "lineage": "b14a8f8d-7a76-0523-611d-ae928dd351a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084a7c1e1069233c9",
            "arn": "arn:aws:ec2:eu-west-1:022203357448:elastic-ip/eipalloc-084a7c1e1069233c9",
            "association_id": "eipassoc-029eb99b1990c23d2",
            "domain": "vpc",
            "id": "eipalloc-084a7c1e1069233c9",
            "instance": "i-0b50064c5feff6321",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-056c2daf5ef610a29",
            "private_dns": "ip-10-0-4-155.eu-west-1.compute.internal",
            "private_ip": "10.0.4.155",
            "public_dns": "ec2-99-80-146-128.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.80.146.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "botit_eip"
            },
            "tags_all": {
              "Name": "botit_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2_instance",
            "aws_key_pair.ssh_key",
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.latest_ubuntu_server_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0286d0aea4d6c7a34",
            "arn": "arn:aws:ec2:eu-west-1:022203357448:instance/i-0b50064c5feff6321",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b50064c5feff6321",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "botit_ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056c2daf5ef610a29",
            "private_dns": "ip-10-0-4-155.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.155",
            "public_ip": "99.80.146.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e5ea8b54ff7110bd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d4b87dda2126848",
            "tags": {
              "Name": "botit_ec2_instance"
            },
            "tags_all": {
              "Name": "botit_ec2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac91cc8a6aee8a18"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.latest_ubuntu_server_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022203357448:internet-gateway/igw-05a8e62d9c3fcb51f",
            "id": "igw-05a8e62d9c3fcb51f",
            "owner_id": "022203357448",
            "tags": {
              "Name": "botit_igw"
            },
            "tags_all": {
              "Name": "botit_igw"
            },
            "vpc_id": "vpc-0d8de2e1bf58cc94c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022203357448:route-table/rtb-0431118d6c404485e",
            "id": "rtb-0431118d6c404485e",
            "owner_id": "022203357448",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a8e62d9c3fcb51f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "botit_rtb"
            },
            "tags_all": {
              "Name": "botit_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8de2e1bf58cc94c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2b6e215273b29e6",
            "route_table_id": "rtb-0431118d6c404485e",
            "subnet_id": "subnet-07d4b87dda2126848"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022203357448:security-group/sg-0ac91cc8a6aee8a18",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac91cc8a6aee8a18",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "78.47.221.219/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "botit_sg",
            "name_prefix": "",
            "owner_id": "022203357448",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "botit_sg"
            },
            "tags_all": {
              "Name": "botit_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8de2e1bf58cc94c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022203357448:subnet/subnet-07d4b87dda2126848",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d4b87dda2126848",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022203357448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "botit_subnet"
            },
            "tags_all": {
              "Name": "botit_subnet"
            },
            "vpc_id": "vpc-0d8de2e1bf58cc94c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022203357448:vpc/vpc-0d8de2e1bf58cc94c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03942a983c19203af",
            "default_route_table_id": "rtb-088616523dc80b3a9",
            "default_security_group_id": "sg-09bde6e24223ce188",
            "dhcp_options_id": "dopt-d961d9bf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8de2e1bf58cc94c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-088616523dc80b3a9",
            "owner_id": "022203357448",
            "tags": {
              "Name": "botit_vpc"
            },
            "tags_all": {
              "Name": "botit_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_within",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022203357448:security-group-rule/sgr-0a411a947a8fbf7b6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a411a947a8fbf7b6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ac91cc8a6aee8a18",
            "security_group_rule_id": "sgr-0a411a947a8fbf7b6",
            "tags": {
              "Name": "botit_sg_within"
            },
            "tags_all": {
              "Name": "botit_sg_within"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022203357448:security-group-rule/sgr-0226f8bcb75793976",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0226f8bcb75793976",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ac91cc8a6aee8a18",
            "security_group_rule_id": "sgr-0226f8bcb75793976",
            "tags": {
              "Name": "botit_sg_http"
            },
            "tags_all": {
              "Name": "botit_sg_http"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:022203357448:security-group-rule/sgr-079d560ca6a9bc179",
            "cidr_ipv4": "78.47.221.219/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-079d560ca6a9bc179",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ac91cc8a6aee8a18",
            "security_group_rule_id": "sgr-079d560ca6a9bc179",
            "tags": {
              "Name": "botit_sg_ssh"
            },
            "tags_all": {
              "Name": "botit_sg_ssh"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}